# cpp-wasm

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bun.lockb  index.ts  package.json  vcpkg.json
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: .github.yml  ci.yml
src/: main.cpp
www/: index.html
